fix: 'Bearer <토큰>' 형식으로 Authorization 헤더 처리